проверка комит команды

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   />
 
   <!-- Tailwind CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>1
   <script>
     tailwind.config = {
       darkMode: 'class'
@@ -98,7 +98,7 @@
     <img
       class="h-full w-full object-cover opacity-20 dark:opacity-35"
       src="https://source.unsplash.com/1600x900/?hvac,air-conditioning,technician"
-      alt="HVAC technician"
+      alt="HVAC technician 777 "
       loading="lazy"
     />
     <div class="absolute inset-0 bg-gradient-to-b from-slate-50 via-slate-50/70 to-slate-50 dark:from-slate-950 dark:via-slate-950/70 dark:to-slate-950"></div>
