--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           href="#quote"
           class="rounded-full bg-slate-900 px-6 py-3 text-center text-sm font-semibold text-white hover:bg-slate-700 dark:bg-white dark:text-slate-900 dark:hover:bg-slate-200"
         >
-          Book a Technician
+          Book a Technician Now
         </a>
         <a
           href="tel:+13238704790"
