проверка коммит и пуш 2  2 команды

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h1 class="mt-5 text-4xl font-extrabold tracking-tight sm:text-5xl">
         HVAC Repair in Los Angeles —
         <span class="text-emerald-600 dark:text-emerald-300">fast</span>, <span class="text-emerald-600 dark:text-emerald-300">clean</span>, and
-        <span class="text-emerald-600 dark:text-emerald-300">done right</span>
+        <span class="text-emerald-600 dark:text-emerald-300">done right NOW</span>
       </h1>
 
       <p class="mt-5 max-w-2xl text-base leading-relaxed text-slate-600 dark:text-slate-300">
